<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.samo.justjava.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textImeMultiLine"
        android:id="@+id/edit_text"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/topping_name"
        android:textAllCaps="true" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/whipped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:paddingLeft="24dp"/>
        <CheckBox
            android:id="@+id/choco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            tools:ignore="DuplicateIds" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/quantity"
        android:textAllCaps="true" />


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toRightOf="@id/quantity_text_view"
            android:onClick="increment"
            android:text="+" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_toRightOf="@id/decrement"
            android:paddingTop="12dp"

            android:text="1"

            android:textAlignment="center"
            android:textColor="@android:color/black"

            android:textSize="16sp" />

        <Button
            android:id="@+id/decrement"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:onClick="decrement"
            android:text="-" />
    </RelativeLayout>

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/order_summary"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="5$"

        android:textColor="@android:color/black"

        android:textSize="16sp" />

    <Button

        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:padding="8dp"
        android:text="@string/order" />


</LinearLayout>
</ScrollView>